--- a/Homework 1 and 2.ipynb
+++ b/Homework 1 and 2.ipynb
@@ -535,14 +535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nput the size of the square: 3\n",
+      "Input the size of the square: 3\n",
       "###\n",
       "###\n",
       "###\n"
@@ -555,9 +555,16 @@
     "        printing=\"#\"*n\n",
     "        for i in range(n):\n",
     "            print(printing)\n",
-    "size=input(\"nput the size of the square: \")\n",
+    "size=input(\"Input the size of the square: \")\n",
     "square_size(int(size))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
